app/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ads
  labels:
    argocd.argoproj.io/managed-by: openshift-cloudtemple-gitops
    kubernetes.io/metadata.name: ads
    type: customer
    test: coucou
  annotations:
    openshift.io/description: ''
    openshift.io/display-name: ''
    openshift.io/node-selector: node-role.kubernetes.io/infra=
    openshift.io/requester: ocp01-grg-admin-rescue
